@@ -1,3 +1,8 @@
+2007-10-24  Mike Kestner  <mkestner@novell.com>
+
+	* generator/InterfaceGen.cs: generate an Implementor prop on the
+	adapters to obtain the underlying object.
+
 2007-10-22  Mike Kestner  <mkestner@novell.com>
 
 	* configure.in.in: add a win64 check and a compiler define for
